--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Reverent.ly",
   "version": "1.0",
-  "description": "Chrome Extension Example for manipulating DOM.",
+  "description": "Internet for the Supreme Leader.",
   "content_scripts": [{
     "matches": ["<all_urls>"],
     "js": ["content.js", "jquery.js"]
