--- a/manifest.json
+++ b/manifest.json
@@ -16,5 +16,8 @@
   "permissions": [
     "tabs"
   ],
+  "icons": { "16": "img/fav_icon.png",
+           "48": "img/icon48.png",
+          "128": "img/icon128.png" },
   "manifest_version": 2
 }
